# Rex-master

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CppCheckSuppressions.txt  README.md  extraction.conf  run-clang-format.sh  run-cppcheck.sh  stack_based.py  test.cpp
Driver/: Analysis.cpp  Analysis.h  ExtractionConfig.cpp  ExtractionConfig.h  IgnoreMatcher.cpp  IgnoreMatcher.h  RexArgs.cpp  RexArgs.h  RexMaster.cpp  ThrowsWithTrace.h  ToolRunner.cpp  ToolRunner.h
Graph/: RexEdge.cpp  RexEdge.h  RexNode.cpp  RexNode.h  TAGraph.cpp  TAGraph.h
JSON/: jsoncpp.cpp
Linker/: CSVWriter.cpp  CSVWriter.h  CypherWriter.cpp  CypherWriter.h  LenDataStr.h  LinkAttrs.h  Linker.cpp  Linker.h  TAObjectFile.cpp  TAObjectFile.h  TAObjectWriter.cpp  TAObjectWriter.h  TASchema.cpp  TASchema.h  TASchemeAttribute.cpp  TASchemeAttribute.h  TAWriter.cpp  TAWriter.h
Tools/: copyCompDBs.sh  runOnAutonomoose.sh
Tools/RIDE/: .project
Tools/RexAnalyzer/: .project
Tools/RexAnalyzer/src/ca/uwaterloo/bmuscede/graph/: Edge.java  Node.java
Tools/RexAnalyzer/src/ca/uwaterloo/bmuscede/ta/: StringErrorListener.java  TupleAttributeBaseListener.java
Tools/TA_to_Neo4j/: ta_to_neo4j.py
Tools/TriageCheck/grok_scripts/: BehaviourAlterationOne.ql  BehaviourAlterationThree.ql  BehaviourAlterationTwo.ql
Walker/: BaselineWalker.cpp  BaselineWalker.h  CondScope.cpp  CondScope.h  ParentWalker.cpp  ParentWalker.h  ROSConsumer.cpp  ROSConsumer.h  ROSWalker.cpp  ROSWalker.h  RexID.cpp  RexID.h  VarWalker.cpp  VarWalker.h  trinity.cpp
XML/: rapidxml_utils.hpp
docs/: build-pdf.sh
docs/FactExtractorManual/: FactExtractorManual.tex  Makefile  StylePreamble.tex
docs/dmitry/: docs.md
docs/dmitry/non-rex-stuff to submit/: cypher_notes.md
docs/dmitry/non-rex-stuff to submit/CFG validator/: README.md
docs/dmitry/non-rex-stuff to submit/CFG validator/main/: README.md  autonomoose.py  driver.py  preprocess.cypher  preprocess.sh  test_input.cpp  tests.py  validator.py
docs/dmitry/non-rex-stuff to submit/CFG validator/using_returns/: README.md  driver.py  preprocess.cypher  tests.py  validator.py
docs/dmitry/non-rex-stuff to submit/autonomoose stuff/: README.md  autonomoose_dataflows.md  autonomoose_stats.md  cmd_vel_topic_id.patch  global_path_msg.patch  gridmap_msg.patch  remove_unreachable_code.patch  runOnAutonomoose.sh
docs/dmitry/non-rex-stuff to submit/docker+neo4j scripts/: README.md  importandrun.sh  importcsv.sh  restart.sh  runcypher.sh  start_neo4j.sh
docs/gary/: docs.md
docs/sunjay/: Makefile  s5varma.log.md
docs/sunjay/templates/: work-log.latex
rex-build-env/: Dockerfile
tests/: test.sh
tests/RexTests/: assignment.txt
tests/SandwichBar/: RexInput.txt  SandwichBar  SandwichBar.h
tests/SandwichBar-master/: SandwichBar.cpp
tests/SandwichBar-master/Capital/: Recipe.cpp
tests/SandwichBar-master/Customers/: Sandwich.h  Substitution.cpp
tests/SandwichBar-master/FoodItems/: ComplexIngredient.h  Food.cpp  Ingredient.h  Inventory.cpp  Inventory.h
tests/SandwichBar/Capital/: ComplexRecipe.cpp  ComplexRecipe.h  Recipe.h
tests/SandwichBar/Customers/: Order.cpp  Order.h  Sandwich.cpp  Substitution.h
tests/SandwichBar/FoodItems/: ComplexIngredient.cpp  Food.h  Ingredient.cpp  SimpleIngredient.cpp  SimpleIngredient.h
tests/sample/: CMakeLists.txt  RexInput.txt  test.sh
